--- a/1.2.1/index.html
+++ b/1.2.1/index.html
@@ -2,13 +2,26 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>lesson1.1</title>
+    <title>lesson1.2.1</title>
   </head>
 
   <body>
       <h1>У нас есть всё для классного отдыха с друзьями!</h1>
-      <ul></ul>
-        <li> VR</li>
+      <ul>
+        <li> VR очки</li>
+        <li> Аудио-система 5.1 с отличным звуком</li>
+        <li> Караоке (4 микрофона)</li>
+        <li> Настольные игры</li>
+        <li> Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</li>
+        <li> PlayStation 5</li>
+      </ul>
+      <h1>Наши залы</h1>
+      <ol>
+        <li>80's vibes</li>
+        <li>Star wars</li>
+        <li>Wild west</li>
+        <li>Neon style</li>
+      </ol>
       <h1>О нас</h1>
       <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности
       </i> в центральной части города
