--- a/1.2.1/index.html
+++ b/1.2.1/index.html
@@ -29,6 +29,6 @@
       <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.
       </p>
       <blockquote><p><b>Game Over</b> - это место незабываемых впечатлений</p>
-      <p><i>Аркадий Абакшин, создатель игровой территории GAME OVER</i></p></blockquote>
+      <p>Аркадий Абакшин, создатель игровой территории GAME OVER</p></blockquote>
   </body>
 </html>
