--- a/1.3/index.html
+++ b/1.3/index.html
@@ -2,10 +2,71 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>lesson1.2.1</title>
+    <title>lesson1.2.3</title>
   </head>
 
   <body>
-  
+    <h1>Меню</h1>
+    <ul>
+      <li>
+        <a href="#one">Залы</a>
+      </li>
+      <li>
+        <a href="#two">О нас</a>
+      </li>
+      <li>
+        <a href="#three">Бронь</a>  <!--Ссылка не работает, т.к. в образце нет такого раздела -->
+      </li>
+      <li>
+        <a href="#four">Отзывы</a>  <!--Ссылка не работает, т.к. в образце нет такого раздела -->
+      </li>
+      <li>
+        <a href="#five">Контакты</a>
+      </li>
+    </ul>
+
+    <h2>У нас есть всё для классного отдыха с друзьями!</h2>
+    <ul>
+      <li> VR очки</li>
+      <li> Аудио-система 5.1 с отличным звуком</li>
+      <li> Караоке (4 микрофона)</li>
+      <li> Настольные игры</li>
+      <li> Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</li>
+      <li> PlayStation 5</li>
+    </ul>
+    <h2 id="one">Наши залы</h2>
+    <ol>
+      <li>
+        <a href="rooms/vibes.html">80's vibes</a> 
+      </li>
+      <li>
+        <a href="rooms/starwars.html">Star wars</a> 
+      </li>
+      <li>
+        <a href="rooms/wildwest.html">Wild west</a> 
+      </li>
+      <li>
+        <a href="rooms/neon.html">Neon style</a> 
+      </li>
+    </ol>
+    
+    <h2 id="two">О нас</h2>
+    <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности
+    </i> в центральной части города</p>
+    <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.
+    </p>
+    <blockquote><p><b>Game Over</b> - это место незабываемых впечатлений</p>
+    <p>Аркадий Абакшин, создатель игровой территории GAME OVER</p></blockquote>
+    
+    <h2 id="five">Контакты</h2>
+    <p>г. Москва ул. Аквамарина, 16</p>
+    <a href="tel:89509302893">8(950)930-28-93</a>
+    <br>
+    <a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a>
+    <ul>
+      <li><a  href="https://vk.com" target="_blank">Vkontakte</a></li>
+      <li><a  href="https://t.me" target="_blank">Telegram</a></li>
+    </ul>
+
   </body>
 </html>
