--- a/1.3/index.html
+++ b/1.3/index.html
@@ -59,8 +59,10 @@
     <p>Аркадий Абакшин, создатель игровой территории GAME OVER</p></blockquote>
     
     <h2 id="five">Контакты</h2>
-    <p>г. Москва ул. Аквамарина, 16</p>
-    <a href="tel:89509302893">8(950)930-28-93</a>
+    <address>
+      <p>г. Москва ул. Аквамарина, 16</p>
+      <a href="tel:89509302893">8(950)930-28-93</a>
+    </address>
     <br>
     <a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a>
     <ul>
