--- a/1.4/index.html
+++ b/1.4/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>lesson1.4</title>
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg">
     <link rel="icon" type="image/png" href="img/logo.png">
+
   </head>
 
   <body>
